# discretized-optimized-map-projection

./: .gitignore  CITATION.cff  README.md  pyproject.toml  run.py  script-article.py  script-example.py  script.py
docs/examples/: script.py
src/: cartesian.py  common.py  dggrid.py  geo.py  gui.py  naturalEarth.py  timer.py  workerThread.py
src/app/: app.py  common.py  gui.py  guiAbout.py  guiSimulationSettings.py  renderThread.py  windowMain.py  windowProj.py  windowSimulationSettings.py  workerThread.py
src/app/threads/: renderThread.py  workerThread.py
src/app/windows/: windowMain.py  windowProj.py  windowSimulationSettings.py
src/common/: console.py  database.py  finder.py  functions.py  gui.py  paths.py  timer.py  video.py
src/geoGrid/: geoGrid.py  geoGridCell.py  geoGridProjection.py  geoGridProjectionTIN.py  geoGridRenderer.py  geoGridSettings.py  geoGridWeight.py
src/geometry/: cartesian.py  common.py  dggrid.py  geo.py  naturalEarth.py  strategy.py
src/imageBackends/: imageBackend.py  imageBackendPillow.py  imageBackendSvg.py
src/interfaces/common/: common.py  file.py  interfaceCommon.py  projections.py
src/interfaces/gui/: app.py  windowMain.py  windows.py
src/interfaces/gui/threads/: renderThread.py  workerThread.py
src/interfaces/gui/windows/: windowAbout.py  (+2 more)
src/interfaces/script/: __init__.py  app.py
src/mechanics/: force.py
src/mechanics/potential/: potential.py  potentialArea.py  potentialDistance.py  potentialDistanceHomogeneity.py  potentialOrientation.py  potentialShape.py  potentialTriangleAltitude.py  potentials.py
